--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,8 +18,8 @@ jobs:
       with:
         dotnet-version: 5.0.x
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore Source/SpacePark.sln
     - name: Build
       run: dotnet build --no-restore Source/SpacePark.sln
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
+    - name: Test Source/SpacePark.sln
+      run: dotnet test --no-build --verbosity normal Source/SpacePark.sln
